[project]
name = "likwid-roofline"
version = "0.1.0"
authors = [
  {name = "Omar Awile", email = "omar.awile@gmail.com"}
]
license = "UPL-1.0"
description = "Roofline plotting utility that uses benchmark data from LIKWID"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
